--- a/dist.ini
+++ b/dist.ini
@@ -13,6 +13,16 @@ name=Bencher-Scenarios-LogDispatch
 [Prereqs]
 perl=5.010001
 
+; core modules
+
+; non-core modules
+
+;!lint_prereqs assume-used "undetected, used by bencher; we force version"
+Log::Dispatch::FileWriteRotate=0.04
+
+strict=0
+warnings=0
+
 [Extras / lint-prereqs / assume-provided]
 ; precomputed so we only need this during development
 ;App::lcpan::Call=0
