[dist] Enable static install

--- a/dist.ini
+++ b/dist.ini
@@ -20,3 +20,4 @@ Log::Dispatch::FileWriteRotate=0.04
 [Extras / lint-prereqs / assume-provided]
 ; precomputed so we only need this during development
 ;App::lcpan::Call=0
+[StaticInstall]
